初回コミット

--- a/templates/diary/index.html
+++ b/templates/diary/index.html
@@ -14,9 +14,11 @@
         <a href="{% url 'blog:frontpage' %}" class="button">喋る場入り口</a>
         <br>
         <hr>
-        <a href="{% url 'chat:start_stream' %}" class="button">先に1人で始める</a>
+        🚧建設中※まだ使用できません。
+        <!-- <a href="{% url 'chat:start_stream' %}" class="button">先に1人で始める</a> -->
         <br>
-        <a href="{% url 'chat:chat_home' %}" class="button">みんなと合流する</a>
+        🚧建設中※まだ使用できません。
+        <!-- <a href="{% url 'chat:chat_home' %}" class="button">みんなと合流する</a> -->
         <br>
         <hr>
         <a href="{% url 'accounts:user_list' %}" class="button">登録ユーザー一覧</a>
