--- a/templates/blog/comment.html
+++ b/templates/blog/comment.html
@@ -1,5 +1,6 @@
 {% extends "base/diary_base.html" %}
 {% load comment_tags %}
+{% load static %}
 {% block body %}
 
 <div class="media-content reply-indented">
