--- a/templates/base/diary_base.html
+++ b/templates/base/diary_base.html
@@ -7,10 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>日記</title>
     {% load static %}
-    <link rel="stylesheet" href="{% static 'diary/static/diary/css/base.css' %}">
-    <script src="{% static 'diary/static/diary/js/base.js' %}"></script>
+    <link rel="stylesheet" href="{% static 'diary/css/base.css' %}">
+    <script src="{% static 'diary/js/base.js' %}"></script>
     <!-- blog.js の読み込み -->
-    <script src="{% static 'blog/static/blog/js/blog.js' %}"></script>
+    <script src="{% static 'blog/js/blog.js' %}"></script>
 </head>
 
 <body>
