--- a/templates/blog/post_detail.html
+++ b/templates/blog/post_detail.html
@@ -162,7 +162,7 @@
 <h2 class="subtitle">コメント</h2>
 <div id="comments">
     <!-- 親コメントの新しい順で表示 -->
-    {% for parent in parent_comments %}
+    {% for comment in comments %}
     <article class="media">
         <div class="media-content">
             <div class="content">
