--- a/templates/blog/render_comments.html
+++ b/templates/blog/render_comments.html
@@ -10,19 +10,19 @@
 
 
 {% for comment in comments %}
+
 <div class="content">
     <p>
         <strong>{{ comment.name }}</strong>
         >>> <strong>{{ comment.reply_to }}</strong>
-        <small>{{ comment.posted_date }}</small>
-        <br>{{ comment.body }}
+        <small>{{ comment.posted_date }}</small><br>
+        {{ comment.body }}
     </p>
 </div>
 
-<!-- 子コメントへの返信フォーム -->
-<button class="show-reply-button" onclick="showReplyForm({{ comment.id }})">返信</button>
-<div id="reply-form-{{ comment.id }}" class="reply-form" style="display:none;">
-    <p>返信先: <strong>{{ comment.name }}</strong></p>
+<button onclick="showReplyForm({{ comment.id }})">返信</button>
+
+<div id="reply-form-{{ comment.id }}" style="display:none;">
     <form method="post">
         {% csrf_token %}
         {{ reply_forms.comment.id.as_p }}
@@ -32,10 +32,10 @@
     </form>
 </div>
 
-<!-- 子コメントがさらにある場合 -->
-{% if comment.replies.exists %}
+{% if comment.replies.all %}
 <div class="reply-indented">
-    {% include "blog/render_comments.html" with comments=comment.replies.all %}
+    {% include "blog/render_comments.html" with comments=comment.replies.all reply_forms=reply_forms %}
 </div>
 {% endif %}
+
 {% endfor %}
