--- a/templates/blog/child_comments.html
+++ b/templates/blog/child_comments.html
@@ -14,7 +14,7 @@
     <button onclick="showReplyForm({{ comment.id }})">返信</button>
 
     <div id="reply-form-{{ comment.id }}" style="display:none;">
-        <form method="post">
+        <form method="post" action="{% url 'blog:post_detail' slug=comment.post.slug %}">
             {% csrf_token %}
             {{ reply_forms.comment.id.as_p }}
             <input type="hidden" name="parent_comment" value="{{ comment.id }}">
