--- a/templates/blog/frontpage.html
+++ b/templates/blog/frontpage.html
@@ -62,7 +62,8 @@
     <h2 class="subtitle">{{post.title}}</h2>
     <small>Posted at {{post.posted_date}}</small>
     <p>{{post.intro}}</p>
-    <a href="{% url 'post_detail' post.slug %}">もっと読む</a>
+    <a href="{% url 'blog:post_detail' slug=post.slug %}">もっと読む</a>
+
 <br>
 
 </div>
