--- a/templates/blog/comment.html
+++ b/templates/blog/comment.html
@@ -24,7 +24,7 @@
     <div id="reply-form-{{ comment.id }}" style="display:none;">
         <form method="post" action="{% url 'blog:post_detail' slug=comment.post.slug %}">
             {% csrf_token %}
-            {{ reply_forms.comment.id.as_p }}
+            {{ reply_forms|dict_get:comment.id.as_p }}
             <input type="hidden" name="parent_comment" value="{{ comment.id }}">
             <input type="hidden" name="reply_to" value="{{ comment.name }}">
             <button class="button is-small is-success">返信を送信</button>
