--- a/templates/blog/post_detail.html
+++ b/templates/blog/post_detail.html
@@ -176,7 +176,7 @@
         <form method="post" action="{% url 'blog:post_detail' slug=post.slug %}">
             {% csrf_token %}
 
-            {{ reply_forms.comment.id.as_p }}
+            {{ reply_forms|dict_get:comment.id.as_p }}
 
             <input type="hidden" name="parent_comment" value="{{ comment.id }}">
             <input type="hidden" name="reply_to" value="{{ comment.name }}">
