--- a/templates/blog/post_detail.html
+++ b/templates/blog/post_detail.html
@@ -145,9 +145,10 @@
 <small>Posted at {{ post.posted_date }}</small>
 <p>{{ post.body }}</p>
 
-<h2 class="subtitle">コメントを書く</h2>
+<hr>
 
-<form method="post" action="{% url 'blog:post_detail' slug=post.slug %}">
+<h2 class="subtitle">コメントを書く</h2>
+<form method="post">
     {% csrf_token %}
     {{ form.as_p }}
     <button class="button is-success">コメントを投稿</button>
@@ -157,40 +158,13 @@
 
 <h2 class="subtitle">コメント一覧</h2>
 
-{% for comment in parent_comments %}
-<article class="media">
+{% include "blog/child_comments.html" with comments=parent_comments level=0 %}
 
-    <div class="media-content">
-        <p>
-            <strong>{{ comment.name }}</strong>
-            <small>{{ comment.posted_date }}</small><br>
-            {{ comment.body }}
-        </p>
-    </div>
+<script>
+    function toggleReply(id) {
+        const el = document.getElementById(`reply-form-${id}`);
+        el.style.display = el.style.display === "none" ? "block" : "none";
+    }
+</script>
 
-    <!-- 返信ボタン -->
-    <button onclick="showReplyForm({{ comment.id }})">返信</button>
-
-    <!-- 返信フォーム -->
-    <div id="reply-form-{{ comment.id }}" style="display:none;">
-        <form method="post" action="{% url 'blog:post_detail' slug=post.slug %}">
-            {% csrf_token %}
-
-            {{ reply_forms|dict_get:comment.id.as_p }}
-
-            <input type="hidden" name="parent_comment" value="{{ comment.id }}">
-            <input type="hidden" name="reply_to" value="{{ comment.name }}">
-
-            <button class="button is-small is-success">返信を送信</button>
-        </form>
-    </div>
-
-    {% if comment.replies.all %}
-    <div class="reply-indented">
-        {% include "blog/render_comments.html" with comments=comment.replies.all reply_forms=reply_forms post=post %}
-    </div>
-    {% endif %}
-
-</article>
-<hr>
-{% endfor %}
+{% endblock %}
