fix static files with whitenoise

--- a/templates/base/diary_base.html
+++ b/templates/base/diary_base.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="ja">
 
+{% load static %}
+<script src="{% static 'blog/js/blog.js' %}"></script>
+<link rel="stylesheet" href="{% static 'diary/css/base.css' %}">
+
 <head>
     <meta charset="UTF-8">
     <meta name="csrf-token" content="{{ csrf_token }}">
