--- a/templates/blog/frontpage.html
+++ b/templates/blog/frontpage.html
@@ -97,7 +97,7 @@
     <h2 class="subtitle">{{ post.title }}</h2>
     <small>Posted at {{ post.posted_date }}</small>
 
-    <p>{{ post.body }}</p>
+<p>{{ post.body|truncatechars:120 }}</p>
 
     <!-- 🔽 画像サムネ -->
     {% if post.image %}
