--- a/templates/blog/frontpage.html
+++ b/templates/blog/frontpage.html
@@ -32,9 +32,9 @@
 
     <!-- 🔽 動画サムネ -->
     {% if post.video %}
-    <div class="video-thumb" data-video-url="{{ comment.video.url }}">
+    <button class="video-thumb" data-video-url="{{ post.video.url }}">
         ▶ 動画を見る
-    </div>
+    </button>
     {% endif %}
 
     <br>
