--- a/templates/blog/post_detail.html
+++ b/templates/blog/post_detail.html
@@ -19,13 +19,9 @@
     {% endif %}
 
     {% if post.video %}
-    <!-- <div class="video-thumb" onclick="openMedia('{{ post.video.url }}', 'video')">
+    <button class="video-thumb" data-video-url="{{ post.video.url }}">
         ▶ 動画を見る
-    </div> -->
-
-    <div class="video-thumb" data-video-url="{{ comment.video.url }}">
-        ▶ 動画を見る
-    </div>
+    </button>
     {% endif %}
 
 </div>
